Broke multi-connection inter-components