@@ -1,8 +1,24 @@
 # O&#8216;simlar va Zombilar
 
+## Ishga tushurish
+- `Download JavaFX SDK`
+- `--module-path /path/to/javafx-sdk-21.0.2/lib --add-modules javafx.controls,javafx.fxml,javafx.media` - ishlamasa boshqalarni ham qo&#8216;shish kerak
+- VM option is located Run/Debug configurations menyu in IntellijIdea
+
 
 ## Foydalanilgan manblar
 - [Java 11](https://www.oracle.com/java/technologies/javase/jdk11-archive-downloads.html) - Java
+- [JavaFX](https://openjfx.io/openjfx-docs/) - JavaFX is an open source, next generation client application platform for desktop, mobile and embedded systems built on Java.
 
 ### Havolalar
 - [Illegal Access Exception](https://stackoverflow.com/questions/70027326/the-media-class-causes-javafx-to-crash)
+
+
+### Eslatmalar
+- Do not use IntelliJIdea Java! Use another
+- .DS_Store - In the Apple macOS, it is a file that stores custom attributes of its containing folder, such as folder view options, icon positions, and other visual information.
+
+
+## Vaqt tizmasi
+- 2021-yil yaratilgan
+- 2024-yil gitga yuklandi
